RESOLVED FIXED159477
[iOS] Text suggestions should be cleared when form input session is invalidated
https://bugs.webkit.org/show_bug.cgi?id=159477
Summary [iOS] Text suggestions should be cleared when form input session is invalidated
Chelsea Pugh
Reported 2016-07-06 11:16:05 PDT
Text suggestions should be cleared when form input session is invalidated. Patch forthcoming.
Attachments
[iOS] Text suggestions should be cleared when form input session is invalidated.txt (1.17 KB, patch)
2016-07-06 11:21 PDT, Chelsea Pugh
no flags
Patch v2 (1.37 KB, patch)
2016-07-06 16:07 PDT, Chelsea Pugh
no flags
Chelsea Pugh
Comment 1 2016-07-06 11:21:02 PDT
Created attachment 282913 [details] [iOS] Text suggestions should be cleared when form input session is invalidated.txt
Chelsea Pugh
Comment 2 2016-07-06 16:07:06 PDT
Created attachment 282957 [details] Patch v2 New patch where we just set the input delegate's suggestions to nil rather than nil-ing out the suggestions that the client set.
mitz
Comment 3 2016-07-06 16:09:34 PDT
Comment on attachment 282957 [details] Patch v2 View in context: https://bugs.webkit.org/attachment.cgi?id=282957&action=review > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:373 > + [suggestionDelegate setSuggestions:nil]; Can’t write suggestionDelegate.suggestions = nil?
WebKit Commit Bot
Comment 4 2016-07-06 16:38:35 PDT
Comment on attachment 282957 [details] Patch v2 Clearing flags on attachment: 282957 Committed r202884: <http://trac.webkit.org/changeset/202884>
WebKit Commit Bot
Comment 5 2016-07-06 16:38:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.