[iOS] Text suggestions should be cleared when form input session is invalidated https://bugs.webkit.org/show_bug.cgi?id=159477

Patch by Chelsea Pugh <cpugh@apple.com> on 2016-07-06
Reviewed by Dan Bernstein.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKFormInputSession invalidate]): Set input delegate's suggestions to nil when a form input session is
invalidated. This will set the keyboard QuickType suggestions back to their default values.

Canonical link: https://commits.webkit.org/177614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202884 268f45cc-cd09-0410-ab3c-d52691b4dbfc